# singleDigitNixieClock

./: .gitignore  .gitmodules  LICENCE  README.md
displayBoard/: displayBoard.brd  displayBoard.sch
doc/: nixieC4.dsl
enclosureDesign/: enclosureModel.f3d
firmware/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  setup.sh
firmware/SingleDigitNixieClock2/: README.md  platformio.ini
firmware/data/: index.html  server.js
firmware/include/: BCD2DecimalDecoder.h  ClockFace.h  ClockInterface.h  ConfigStore.h  In14NixieTube.h  In18NixieTube.h  LedController.h  LedInfo.h  NixieClock.h  NixieClockInterface.h  SleepInfo.h  TimeInfo.h  TimeManager.h  WebServer.h  WifiInfo.h
firmware/main/: CMakeLists.txt  bcd_2_decimal_decoder.cpp  config_store.cpp  ds3231.cpp  i2c_bus.cpp  idf_component.yml  in14_nixie_tube.cpp  led_controller.cpp  led_info.cpp  main.cpp  mutex.cpp  nixie_clock.cpp  sleep_info.cpp  time_info.cpp  web_server.cpp  wifi_info.cpp  wifi_manager.cpp
firmware/main/include/: bcd_2_decimal_decoder.h  clock_iface.h  config_store.h  ds3231.h  i2c_bus.h  in14_nixie_tube.h  led_controller.h  led_info.h  mutex.h  nixie_clock.h  sleep_info.h  time_info.h  web_server.h  wifi_info.h  wifi_manager.h
firmware/src/: BCD2DecimalDecoder.cpp  ClockFace.cpp  ConfigStore.cpp  In14NixieTube.cpp  In18NixieTube.cpp  LedController.cpp  LedInfo.cpp  NixieClock.cpp  NixieClockInterface.cpp  SleepInfo.cpp  TimeInfo.cpp  TimeManager.cpp  WebServer.cpp  WifiInfo.cpp  main.cpp
schematic/controlBoard/: README.md  (+5 more)
(+48 files in other folders)
